--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -36,7 +36,8 @@
             android:layout_height="wrap_content"
             android:text="Sign Up"
             android:id="@+id/button2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="clickSingUpMain" />
     </LinearLayout>
 
 </RelativeLayout>
