ออกแบบหน้าจอสมัครสมาชิก

--- a/app/src/main/res/layout/activity_sing_up2.xml
+++ b/app/src/main/res/layout/activity_sing_up2.xml
@@ -29,7 +29,8 @@
         android:layout_centerHorizontal="true"
         android:background="@color/primary_dark_material_light"
         android:textColor="@color/text"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:onClick="clickSignUp2" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -117,7 +118,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:id="@+id/ragoffice">
 
                 <RadioButton
                     android:layout_width="wrap_content"
