--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -7,13 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pbru.permsook.wiwat.bookroompbru.MainActivity1">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
+    tools:context="pbru.permsook.wiwat.bookroompbru.MainActivity1"
+    android:background="@drawable/bg10">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -22,7 +17,8 @@
         android:layout_alignParentTop="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:background="#00ffffff">
 
         <Button
             android:layout_width="wrap_content"
@@ -38,6 +34,40 @@
             android:id="@+id/button2"
             android:layout_weight="1"
             android:onClick="clickSingUpMain" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentBottom="false"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal"
+        android:background="#46ffffff">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText6"
+            android:hint="User :"
+            android:inputType="text" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText7"
+            android:hint="Password :"
+            android:inputType="textPassword|text" />
     </LinearLayout>
 
 </RelativeLayout>
