--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:text="Sign in"
             android:id="@+id/button"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="clickSignin" />
 
         <Button
             android:layout_width="wrap_content"
