--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -64,7 +64,8 @@
         <ImageView
             android:layout_width="250dp"
             android:layout_height="200dp"
-            android:id="@+id/imageView3" />
+            android:id="@+id/imageView3"
+            android:layout_marginTop="20dp" />
 
         <LinearLayout
             android:orientation="horizontal"
